fix [WEB-911]: horizontal overflow

--- a/src/pages/Page404/page_404.module.scss
+++ b/src/pages/Page404/page_404.module.scss
@@ -17,10 +17,6 @@
   align-items: center;
   position: relative;
   overflow: visible;
-
-  @media screen and (max-width: $tablet) {
-    position: static;
-  }
 }
 
 .title {
